[project]
name = "tmpweb"
version = "0.1.0"
authors = [
  { name="James Frost", email="git@frost.cx" },
]
description = "A python JPEG XL decoder."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]

[project.urls]
"Homepage" = "https://tmpweb.net/"
"Bug Tracker" = "https://github.com/Fraetor/tmpweb.net/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
